--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <i class="fa fa-github"></i>
     <div class="tooltip">Github</div>
   </a>
-  <a href="https://twitter.com/iblamedom" class="social-icon social-icon--twitter">
+  <a href="https://www.twitter.com/iblamedom" class="social-icon social-icon--twitter">
     <i class="fa fa-twitter"></i>
     <div class="tooltip">Twitter</div>
   </a>
