--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Social Icons</title>
+  <title>Get In Touch</title>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
-
+<meta name="viewport" content="width=device-width, initial scale= 1.0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
