--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <!-- partial:index.partial.html -->
 <div class="social-icons">
   
-  <a href="https://www.linkedin.com/in/dominikstosik" class="social-icon social-icon--linkedin">
+  <a href="https://www.linkedin.com/in/dominikstosik" target="_self" class="social-icon social-icon--linkedin">
     <i class="fa fa-linkedin"></i>
     <div class="tooltip">LinkedIn</div>
   </a>
 
-  <a href="https://github.com/iblamedom" class="social-icon social-icon--github">
+  <a href="https://github.com/iblamedom" target="_self" class="social-icon social-icon--github">
     <i class="fa fa-github"></i>
     <div class="tooltip">Github</div>
   </a>
-  <a href="https://www.twitter.com/iblamedom" class="social-icon social-icon--twitter">
+  <a href="https://www.twitter.com/iblamedom" target="_self" class="social-icon social-icon--twitter">
     <i class="fa fa-twitter"></i>
     <div class="tooltip">Twitter</div>
   </a>
-  <a href="https://www.instagram.com/dominik_stosik/" class="social-icon social-icon--instagram">
+  <a href="https://www.instagram.com/dominik_stosik/" target="_self" class="social-icon social-icon--instagram">
     <i class="fa fa-instagram"></i>
     <div class="tooltip">Instagram</div>
   </a>
