--- a/index.html
+++ b/index.html
@@ -2,45 +2,34 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>GetInTouch</title>
-  <link rel="stylesheet" href="./style.css">
-  <meta name="viewport" content="width=device-width, initial scale= 1.0">
-
+  <title>Get In Touch</title>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
+<meta name="viewport" content="width=device-width, initial scale= 1.0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!--
-just playing around, mostly design stuff
--->
+<div class="social-icons">
+  
+  <a href="https://www.linkedin.com/in/dominikstosik" target="_self" class="social-icon social-icon--linkedin">
+    <i class="fa fa-linkedin"></i>
+    <div class="tooltip">LinkedIn</div>
+  </a>
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <a href="https://github.com/iblamedom" target="_self" class="social-icon social-icon--github">
+    <i class="fa fa-github"></i>
+    <div class="tooltip">Github</div>
+  </a>
+  <a href="https://www.twitter.com/iblamedom" target="_self" class="social-icon social-icon--twitter">
+    <i class="fa fa-twitter"></i>
+    <div class="tooltip">Twitter</div>
+  </a>
+  <a href="https://www.instagram.com/dominik_stosik/" target="_self" class="social-icon social-icon--instagram">
+    <i class="fa fa-instagram"></i>
+    <div class="tooltip">Instagram</div>
+  </a>
 
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-</script>
-<ul>
-  <li>
-    <a href="https://www.linkedin.com/in/dominikstosik" target="_self">
-      <i class="fab fa-linkedin-in icon"></i>    </a>
-  </li>
-  <li>
-    <a href="https://www.instagram.com/dominik_stosik/" target="_self"><i class="fab fa-instagram icon"></i></a></li>
-  
-   <li>
-    <a href="https://twitter.com/iblamedom" target="_self"><i class="fab fa-twitter icon"></i></a>
-  </li>
-  <li>
-    <a href="https://github.com/iblamedom" target="_self"><i class="fab fa-github icon"></i></a></li>
-  <li>
-    <a href="https://www.researchgate.net/profile/Dominik-Stosik" target="_self"><i class="fab fa-researchgate icon"></i></a></li>
-  
-  <li>
-    <a href="http://www.iblamedom.com" target="_self"><i class="fas fa-home icon"></i></a></li>
-  <li>
-    <a href="https://www.reddit.com/user/Salt_Cauliflower1045" target="_self"><i class="fab fa-reddit icon"></i></a></li>
-  <li>
-    <a href="https://www.imdb.com/name/nm10798728/" target="_self"><i class="fab fa-imdb icon"></i></a></li>  
-  
-</ul>
+</div>
 <!-- partial -->
   
 </body>
