--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
   <a href="https://www.twitter.com/iblamedom" target="_self" class="social-icon social-icon--twitter">
     <i class="fa fa-twitter"></i>
     <div class="tooltip">Twitter</div>
+    
+    <a href="https://www.researchgate.net/profile/Dominik-Stosik" class="social-icon social-icon--researchgate">
+    <i class="fab fa-researchgate"></i>
+    <div class="tooltip">Researchgate</div>
+  </a>
+  
+  
+  <a href="https://www.instagram.com/dominik_stosik/" class="social-icon social-icon--instagram">
+    <i class="fa fa-instagram"></i>
+    <div class="tooltip">Instagram</div>
+  </a>
   </a>
   <a href="https://www.instagram.com/dominik_stosik/" target="_self" class="social-icon social-icon--instagram">
     <i class="fa fa-instagram"></i>
