--- a/index.html
+++ b/index.html
@@ -2,53 +2,47 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Get In Touch</title>
-  
-  
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-</script>
-  
-<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css"> -->
-  
+  <title>CodePen - GetInTouch</title>
+  <link rel="stylesheet" href="./style.css">
 <meta name="viewport" content="width=device-width, initial scale= 1.0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="social-icons">
-  
-  <a href="https://www.linkedin.com/in/dominikstosik" target="_self" class="social-icon social-icon--linkedin">
-    <i class="fa fa-linkedin"></i>
-    <div class="tooltip">LinkedIn</div>
-  </a>
+<!--
+**Beginners project** Day-1
+Inspired/Mocked from
+How To Add Social Media Icons Without Images - Font Awesome icon css hover effect
+link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMUjh64-BbIe
+-->
 
-  <a href="https://github.com/iblamedom" target="_self" class="social-icon social-icon--github">
-    <i class="fa fa-github"></i>
-    <div class="tooltip">Github</div>
-  </a>
-  <a href="https://www.twitter.com/iblamedom" target="_self" class="social-icon social-icon--twitter">
-    <i class="fa fa-twitter"></i>
-    <div class="tooltip">Twitter</div>
-    
-    <a href="https://www.researchgate.net/profile/Dominik-Stosik" class="social-icon social-icon--researchgate">
-    <i class="fab fa-researchgate"></i>
-    <div class="tooltip">Researchgate</div>
-  </a>
-  
-  
-  <a href="https://www.instagram.com/dominik_stosik/" class="social-icon social-icon--instagram">
-    <i class="fa fa-instagram"></i>
-    <div class="tooltip">Instagram</div>
-  </a>
-  </a>
-  <a href="https://www.instagram.com/dominik_stosik/" target="_self" class="social-icon social-icon--instagram">
-    <i class="fa fa-instagram"></i>
-    <div class="tooltip">Instagram</div>
-  </a>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-</div>
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+</script>
+<ul>
+  <li>
+    <a href="https://www.linkedin.com/in/dominikstosik">
+      <i class="fab fa-linkedin-in icon"></i>    </a>
+  </li>
+  <li>
+    <a href="https://www.instagram.com/dominik_stosik/"><i class="fab fa-instagram icon"></i></a></li>
+  
+   <li>
+    <a href="https://twitter.com/iblamedom"><i class="fab fa-twitter icon"></i></a>
+  </li>
+  <li>
+    <a href="https://github.com/iblamedom"><i class="fab fa-github icon"></i></a></li>
+  <li>
+    <a href="https://www.researchgate.net/profile/Dominik-Stosik"><i class="fab fa-researchgate icon"></i></a></li>
+  
+  <li>
+    <a href="https://codepen.io/iblamedom/live/dyNmXVj"><i class="fas fa-home icon"></i></a></li>
+  <li>
+    <a href="https://www.reddit.com/user/Salt_Cauliflower1045"><i class="fab fa-reddit icon"></i></a></li>
+  <li>
+    <a href="https://www.imdb.com/name/nm10798728/"><i class="fab fa-imdb icon"></i></a></li>  
+  
+</ul>
 <!-- partial -->
   
 </body>
