--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - GetInTouch</title>
+  <title>GetInTouch</title>
   <link rel="stylesheet" href="./style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -36,7 +36,7 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
     <a href="https://www.researchgate.net/profile/Dominik-Stosik"><i class="fab fa-researchgate icon"></i></a></li>
   
   <li>
-    <a href="https://codepen.io/iblamedom/live/dyNmXVj"><i class="fas fa-home icon"></i></a></li>
+    <a href="https://codepen.io/iblamedom"><i class="fas fa-home icon"></i></a></li>
   <li>
     <a href="https://www.reddit.com/user/Salt_Cauliflower1045"><i class="fab fa-reddit icon"></i></a></li>
   <li>
