--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
     <a href="https://twitter.com/iblamedom"><i class="fab fa-twitter icon"></i></a>
   </li>
   <li>
-    <a href="https://github.com/iblamedom"><i class="fab fa-github icon"></i></a></li>
+    <a href="https://github.com/iblamedom"><i class="fab fa-github icon"></i></a></li><br>
   <li>
     <a href="https://www.researchgate.net/profile/Dominik-Stosik"><i class="fab fa-researchgate icon"></i></a></li>
   
