--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
 }
 
 .header {
-  background-color: #fff;
-  color: #fff;
+  background-color: #262626;
+  color: #515151;
   padding: 15px;
 }
 
-  
+ .body {
+  background-color: #262626;
+  color: #515151;
+  padding: 15px;
+}
   [class*="col-"] {
   width: 100%;
 }
-
+<!--  
+  
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .col-s-1 {width: 8.33%;}
@@ -63,6 +68,7 @@
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 }
+  -->
 </style>
 </head>
 <body>
