--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 
 <div class="header">
-  <h1>GetInTouch</h1>
+  <center>  <h1>GetInTouch</h1> </center>
 </div>
 
 
@@ -90,6 +90,8 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
 </script>
+  
+  
 <ul>
   <li>
     <a href="https://www.linkedin.com/in/dominikstosik">
