--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 }
 
  .body {
-  background-color: #262626;
-  color: #515151;
-  padding: 15px;
+        padding: 1em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) }
 }
   [class*="col-"] {
   width: 100%;
