--- a/index.html
+++ b/index.html
@@ -28,14 +28,6 @@
   padding: 15px;
 }
 
- .body {
-        padding: 1em;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%) }
-}
   [class*="col-"] {
   width: 100%;
 }
@@ -107,7 +99,7 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
     <a href="https://twitter.com/iblamedom"><i class="fab fa-twitter icon"></i></a>
   </li>
   <li>
-    <a href="https://github.com/iblamedom"><i class="fab fa-github icon"></i></a></li><br>
+    <a href="https://github.com/iblamedom"><i class="fab fa-github icon"></i></a></li>
   <li>
     <a href="https://www.researchgate.net/profile/Dominik-Stosik"><i class="fab fa-researchgate icon"></i></a></li>
   
