--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
   color: #515151;
   padding: 15px;
 }
-
+.body {
+  background-color: #262626;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   [class*="col-"] {
   width: 100%;
 }
