--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
   <title>GetInTouch</title>
   <link rel="stylesheet" href="./style.css">
 
+  
+  <style>
+.center { 
+  height: 200px;
+  position: relative;
+  border: 3px solid green; 
+}
+
+.center p {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+</style>
+  
+  
+  
 </head>
 <body>
 
@@ -23,7 +43,10 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
 </script>
   
+<div class="center">
   
+  <p>
+
 <ul>
   <li>
     <a href="https://www.linkedin.com/in/dominikstosik">
@@ -48,6 +71,8 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
     <a href="https://www.imdb.com/name/nm10798728/"><i class="fab fa-imdb icon"></i></a></li>  
   
 </ul>
+  </p>
+  </div>
 <!-- partial -->
   
 </body>
