--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true">
   <title>GetInTouch</title>
   <link rel="stylesheet" href="./style.css">
 
@@ -11,7 +12,7 @@
 .center { 
   height: 200px;
   position: relative;
-  border: 3px solid green; 
+ 
 }
 
 .center p {
