--- a/index.html
+++ b/index.html
@@ -1,53 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <meta charset="UTF-8">
+  <title>GetInTouch</title>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
-  <title>GetInTouch</title>
-  <link rel="stylesheet" href="./style.css">
-
-  
-  <style>
-.center { 
-  height: 200px;
-  position: relative;
- 
-}
-
-.center p {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-</style>
-  
-  
-  
 </head>
-<body>
 
 
-<!-- partial:index.partial.html -->
-<!--
-**Beginners project** Day-1
-Inspired/Mocked from
-How To Add Social Media Icons Without Images - Font Awesome icon css hover effect
-link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMUjh64-BbIe
--->
+<p>
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
 </script>
-  
-<div class="center">
-  
-  <p>
-
 <ul>
   <li>
     <a href="https://www.linkedin.com/in/dominikstosik">
@@ -65,15 +33,14 @@ link: https://www.youtube.com/watch?v=QaSLBMqPb2U&list=PL5e68lK9hEzePSLgrkx-PWMU
     <a href="https://www.researchgate.net/profile/Dominik-Stosik"><i class="fab fa-researchgate icon"></i></a></li>
   
   <li>
-    <a href="https://codepen.io/iblamedom"><i class="fas fa-home icon"></i></a></li>
+    <a href="https://codepen.io/iblamedom/live/dyNmXVj"><i class="fas fa-home icon"></i></a></li>
   <li>
     <a href="https://www.reddit.com/user/Salt_Cauliflower1045"><i class="fab fa-reddit icon"></i></a></li>
   <li>
     <a href="https://www.imdb.com/name/nm10798728/"><i class="fab fa-imdb icon"></i></a></li>  
   
 </ul>
-  </p>
-  </div>
+</p>
 <!-- partial -->
   
 </body>
