--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="HandheldFriendly" content="true">
   <meta charset="UTF-8">
   <title>GetInTouch</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet" href="./style.css">
+ <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet" href="./style.css"> -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     
@@ -17,15 +17,13 @@
 </script>
 <p>
 
-
-
-
 <ul>
   <li>
     <a href="https://www.linkedin.com/in/dominikstosik">
       <i class="fab fa-linkedin-in icon"></i>    </a>
   </li>
-  <li>
+
+    <li>
     <a href="https://www.instagram.com/dominik_stosik/"><i class="fab fa-instagram icon"></i></a></li>
   
    <li>
