--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <meta name="HandheldFriendly" content="true">
   <meta charset="UTF-8">
   <title>GetInTouch</title>
- <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet" href="./style.css"> -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+<link rel='stylesheet' href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" 
+      crossorigin="anonymous"> href="./style.css">
+    
+ <!--   href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet"  -->
+
 
     
     </head>
