--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="https://www.instagram.com/dominik_stosik/"><i class="fab fa-instagram icon"></i></a></li>
   
    <li>
-    <a href="https://twitter.com/iblamedom"><i class="fab fa-twitter icon"></i></a>
+    <a href="https://twitter.com/iblamedom" target="_blank"><i class="fab fa-twitter icon"></i></a>
   </li>
   <li>
     <a href="https://github.com/iblamedom"><i class="fab fa-github icon"></i></a></li>
