--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" /> 
   <meta charset="UTF-8">
-  <title>CodePen - responsive icons test</title>
+  <title>GetInTouch</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet" href="style.css">
 
 </head>
