--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <title>GetInTouch</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abril+Fatface'><link rel="stylesheet" href="style.css">
-
+<style>
+.content {
+  max-width: 100%;
+  margin: auto;
+}
+</style>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -13,7 +18,8 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
 </script>
-
+<div class="content">
+  
 <ul class="container float">
   <li class="item float-item"><p><a href="https://www.linkedin.com/in/dominikstosik">
     <i class="fab fa-linkedin-in icon"></i>   </a></p>
@@ -47,6 +53,7 @@
   
   
 </ul>
+  </div>
 <!-- partial -->
   
 </body>
