--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 .content {
   max-width: 100%;
   margin: auto;
+  padding: 10px;
 }
 </style>
 </head>
 <body>
+  <center>
 <!-- partial:index.partial.html -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
@@ -55,6 +57,6 @@
 </ul>
   </div>
 <!-- partial -->
-  
+  </center>
 </body>
 </html>
