--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <meta charset="UTF-8">
@@ -14,10 +14,10 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
 </script>
-<div class="content">
+
   <p>
   
-<ul class="container float">
+<ul class="container float content">
   <li class="item float-item"><p><a href="https://www.linkedin.com/in/dominikstosik">
     <i class="fab fa-linkedin-in icon"></i>   </a></p>
   </li>
@@ -51,7 +51,7 @@
   
 </ul>
   </p>
-  </div>
+
 <!-- partial -->
   </center>
 </body>
