--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <p>
   
 <ul class="container float content">
-  <li class="item float-item"><p><a href="https://www.linkedin.com/in/dominikstosik">
-    <i class="fab fa-linkedin-in icon"></i>   </a></p>
+  <li class="item float-item"><a href="https://www.linkedin.com/in/dominikstosik">
+    <i class="fab fa-linkedin-in icon"></i>   </a>
   </li>
     
  
