--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 </head>
 <body>
- 
+ <div class="phone">
+</div>
+<div class="message">
+  Please rotate your device!
+</div>
 <!-- partial:index.partial.html -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
