--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </script>
 
  
-  
+<div id="container">
+  <p>justify-content: center</p>
+  <div id="center">
+    <div>
 <ul class="container float content">
   <li class="item float-item"><a href="https://www.linkedin.com/in/dominikstosik">
     <i class="fab fa-linkedin-in icon"></i>   </a>
@@ -50,7 +53,7 @@
   
   
 </ul>
-  
+  </div>
 
 <!-- partial -->
  
