--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
  
 <div id="container">
-  <p>justify-content: center</p>
+
   <div id="center">
     <div>
 <ul class="container float content">
@@ -53,7 +53,7 @@
   
   
 </ul>
-  </div>
+  </div> </div>
 
 <!-- partial -->
  
