--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -15,9 +15,9 @@
 <link rel="stylesheet" id="cf_styles-css" href="/cdn-cgi/styles/cf.errors.css" type="text/css" media="screen,projection" />
 <!--[if lt IE 9]><link rel="stylesheet" id='cf_styles-ie-css' href="/cdn-cgi/styles/cf.errors.ie.css" type="text/css" media="screen,projection" /><![endif]-->
 <style type="text/css">body{margin:0;padding:0}</style>
-<!--[if lte IE 9]><script type="text/javascript" src="/cdn-cgi/scripts/jquery.min.js"></script><![endif]-->
-<!--[if gte IE 10]><!--><script type="text/javascript" src="/cdn-cgi/scripts/zepto.min.js"></script><!--<![endif]-->
-<script type="text/javascript" src="/cdn-cgi/scripts/cf.common.js"></script>
+<!--[if lte IE 9]><script type="text/javascript" src="/cdn-cgi/jquery.min.js"></script><![endif]-->
+<!--[if gte IE 10]><!--><script type="text/javascript" src="/cdn-cgi/zepto.min.js"></script><!--<![endif]-->
+<script type="text/javascript" src="/cdn-cgi/cf.common.js"></script>
 
 
 </head>
@@ -37,7 +37,7 @@
             
               <div class="cf-highlight-inverse cf-form-stacked">
                 <form class="challenge-form" id="challenge-form" action="/cdn-cgi/l/chk_captcha" method="get">
-  <script type="text/javascript" src="/cdn-cgi/scripts/cf.challenge.js" data-type="normal"  data-ray="000000000000000" async data-sitekey=""></script>
+  <script type="text/javascript" src="/cdn-cgi/cf.challenge.js" data-type="normal"  data-ray="000000000000000" async data-sitekey=""></script>
   <div class="g-recaptcha"></div>
   <noscript id="cf-captcha-bookmark" class="cf-captcha-info">
     <div><div style="width: 302px">
