--- a/challlenge.html
+++ b/challlenge.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Security Check - Innovation Norway</title>
+  <title>Security Check - Norway</title>
   <style>
     body {
       background-color: #fff;
