--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     </svg>
 
     <p>
-      Please complete the security check to access this website.
+      Please complete the security check to access this awesome website.
     </p>
 
     <div class="captcha-box">
-      ::CAPTCHA_BOX::
+      - ::CAPTCHA_BOX::
     </div>
 
     <p>
