--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>Security Check - attained.ai</title>
   <style>
     body {
-      background-color: #fff;
-      color: #000;
+      background-color: #000;
+      color: #fff;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 16px;
       line-height: 1.5;
@@ -99,7 +99,7 @@
     </p>
 
     <div class="captcha-box">
-      - ::CAPTCHA_BOX::
+       ::CAPTCHA_BOX::
     </div>
 
     <p>
