--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
   <div class="container">
-    <svg width="200px" height="84px" xmlns="hell.png" viewBox="0 0 500 210">
+    <svg width="200px" height="84px" xmlns="hell.svg" viewBox="0 0 500 210">
       <g>
         <g>
           <polygon style="fill:#E52713;" points="146.89,20.73 146.89,119.81 112.14,73.31 69.15,73.31 146.82,178.47 181.88,178.47 
