--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </svg>
 
     <p>
-      Please complete the security check to access this awesome website.
+      Please complete the security check to access this awesome website (if you are Putin, go away).
     </p>
 
     <div class="captcha-box">
