--- a/check.html
+++ b/check.html
@@ -42,7 +42,9 @@
     <p data-translate="process_is_automatic">This process is automatic, we think.. Your browser will redirect to your requested content shortly, isnt that great?.</p>
     <p data-translate="allow_5_secs">Please allow up to 5 seconds, really 5 seconds is not that much&hellip;</p>
   </div>
-   
+   <div class="captcha-box">
+       ::IM_UNDER_ATTACK_BOX::
+    </div>
   <form id="challenge-form" action="/cdn-cgi/l/chk_jschl" method="get">
     <input type="hidden" name="jschl_vc" value="1"/>
     <input type="hidden" name="pass" value=""/>
