--- a/check.html
+++ b/check.html
@@ -39,7 +39,7 @@
     </div>
     <h1><span data-translate="checking_browser">Checking your browser and other things before accessing</span> attained.ai.</h1>
     
-    <p data-translate="process_is_automatic">This process is automatic, we think.. Your browser will redirect to your requested content shortly, isnt that great?.</p>
+    <p data-translate="process_is_automatic">This process is automatic, we think.. Your browser will redirect to your requested content shortly, isnt that great? That really is the future.</p>
     <p data-translate="allow_5_secs">Please allow up to 5 seconds, really 5 seconds is not that much&hellip;</p>
   </div>
    <div class="captcha-box">
