--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
 <body>
   <div class="container">
-    <img ="">
-    </img>
+    <video poster="https://cloudflarestream.com/7333d6dd6b97735a38176e12bf2affe8/thumbnails/thumbnail.jpg?height=360" class="css-14ogxpa" playsinline="" preload="auto" autoplay="" muted="false" loop="" src="blob:https://iframe.videodelivery.net/b3cb2d30-728f-4ef6-b1c2-8e2ecff6b401"></video>
 
     <p>
       Please complete the security check to access this awesome website </br> (if you are Putin, go away).
