--- a/russ.html
+++ b/russ.html
@@ -37,12 +37,10 @@
 
 <body>
   <div class="container">
-    <svg "hell.svg">
-    
-    </svg>
+  <video poster="https://cloudflarestream.com/7333d6dd6b97735a38176e12bf2affe8/thumbnails/thumbnail.jpg?height=360" class="css-14ogxpa" playsinline="" preload="auto" autoplay="" muted="false" loop="" src="blob:https://iframe.videodelivery.net/b3cb2d30-728f-4ef6-b1c2-8e2ecff6b401"></video>
 
     <p>
-      Sorry, no Russians.
+    <h1> Sorry, no Russians. </h1>
     </p>
 
     <div class="captcha-box">
