--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>aimbot.tech firewall</title>
+    <title>attained.ai firewall</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>*,.nulled-inner,:after,:before{box-sizing:border-box}.midbox,body{display:flex}.footer,h1,h2{text-align:center}body{background-color:#151515;color:#91959b;flex-direction:column;font-family:-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;font-size:.9rem;margin:0;min-height:100vh;overflow:hidden;padding:0;position:relative}body:after,body:before{background-color:#202020;left:0;position:fixed;right:0;top:0;z-index:-1}body:after{background:linear-gradient(180deg,transparent,#151515)}.nulled-loader{-webkit-perspective:780px;height:100px;left:calc(50% - 50px);margin:130px 0;perspective:780px;position:relative;width:100px}.nulled-inner{-moz-border-radius:50%;-moz-box-sizing:border-box;-ms-border-radius:50%;-ms-box-sizing:border-box;-o-border-radius:50%;-o-box-sizing:border-box;-webkit-border-radius:50%;-webkit-box-sizing:border-box;border-radius:50%;height:100%;position:absolute;width:100%}.nulled-inner.nulled-one{-moz-animation:nulled-rotate-one 1.15s linear infinite;-ms-animation:nulled-rotate-one 1.15s linear infinite;-o-animation:nulled-rotate-one 1.15s linear infinite;-webkit-animation:nulled-rotate-one 1.15s linear infinite;animation:nulled-rotate-one 1.15s linear infinite;border-bottom:3px solid #2196f3;left:0;top:0}.nulled-inner.nulled-two{-moz-animation:nulled-rotate-two 1.15s linear infinite;-ms-animation:nulled-rotate-two 1.15s linear infinite;-o-animation:nulled-rotate-two 1.15s linear infinite;-webkit-animation:nulled-rotate-two 1.15s linear infinite;animation:nulled-rotate-two 1.15s linear infinite;border-right:3px solid #2196f3;right:0;top:0}.nulled-inner.nulled-three{-moz-animation:nulled-rotate-three 1.15s linear infinite;-ms-animation:nulled-rotate-three 1.15s linear infinite;-o-animation:nulled-rotate-three 1.15s linear infinite;-webkit-animation:nulled-rotate-three 1.15s linear infinite;animation:nulled-rotate-three 1.15s linear infinite;border-top:3px solid #2196f3;bottom:0;right:0}@keyframes nulled-rotate-one{0%{-webkit-transform:rotateX(35deg) rotateY(-45deg) rotate(0);transform:rotateX(35deg) rotateY(-45deg) rotate(0)}to{-webkit-transform:rotateX(35deg) rotateY(-45deg) rotate(1turn);transform:rotateX(35deg) rotateY(-45deg) rotate(1turn)}}@-webkit-keyframes nulled-rotate-one{0%{-webkit-transform:rotateX(35deg) rotateY(-45deg) rotate(0)}to{-webkit-transform:rotateX(35deg) rotateY(-45deg) rotate(1turn)}}@keyframes nulled-rotate-two{0%{-webkit-transform:rotateX(50deg) rotateY(10deg) rotate(0);transform:rotateX(50deg) rotateY(10deg) rotate(0)}to{-webkit-transform:rotateX(50deg) rotateY(10deg) rotate(1turn);transform:rotateX(50deg) rotateY(10deg) rotate(1turn)}}@-webkit-keyframes nulled-rotate-two{0%{-webkit-transform:rotateX(50deg) rotateY(10deg) rotate(0)}to{-webkit-transform:rotateX(50deg) rotateY(10deg) rotate(1turn)}}@keyframes nulled-rotate-three{0%{-webkit-transform:rotateX(35deg) rotateY(55deg) rotate(0);transform:rotateX(35deg) rotateY(55deg) rotate(0)}to{-webkit-transform:rotateX(35deg) rotateY(55deg) rotate(1turn);transform:rotateX(35deg) rotateY(55deg) rotate(1turn)}}@-webkit-keyframes nulled-rotate-three{0%{-webkit-transform:rotateX(35deg) rotateY(55deg) rotate(0)}to{-webkit-transform:rotateX(35deg) rotateY(55deg) rotate(1turn)}}.midbox{align-items:center;flex-direction:column;justify-content:center}.footer{bottom:0;left:0;padding-bottom:20px;position:absolute;right:0}h1,h2{text-transform:uppercase}h1{color:#fff;font-size:28px;margin-bottom:10px}h2{font-size:12px;font-weight:600;margin:0}.bull{padding:0 10px}</style>
 
@@ -10,12 +10,20 @@
     <div class="nulled-loader" >
       <div class="nulled-inner nulled-one" style="border-right: 3px solid #f47f18; border-bottom: 3px solid #f47f18"></div>
     </div>
+
+   <center>
+    <h2>Ukraine, our thoughts and hearts are with you.</h2>
+<img src="Ukraine.jpg" alt="Mountain View" style="width:304px;height:228px;"></center>
+
+
     <div class="midbox">
       <h1>
         Testings
       </h1>
-      <h2>Verifying you're not a bot. You'll be redirected shortly.</h2>
+      <h2>Verifying you're not a bot or a terminator. You'll be redirected shortly.</h2>
     </div>
+
+    
     <div style="display:none;"><div class="cf-browser-verification cf-im-under-attack">
   <noscript><h1 data-translate="turn_on_js" style="color:#bd2426;">Please turn JavaScript on and reload the page.</h1></noscript>
   <div id="cf-content" style="display: block;">
@@ -28,8 +36,8 @@
     <h1><span data-translate="checking_browser">Checking your browser and my grocery list before accessing</span> attained.ai</h1>
     
     <p data-translate="process_is_automatic">This process is automatic, I guess. Your browser will redirect to your requested content shortly.</p>
-    <p data-translate="allow_5_secs">Please allow up to 5 seconds…</p> <center>5 seconds is enough to give something <a href="https://github.com/iblamedom/iblamedom.github.io/blob/challenge/Ukraine-Flagge-Herz.jpeg">Ukraine, our thoughts and hearts are with you.</a>
-    </center>  </div>
+    <p data-translate="allow_5_secs">Please allow up to 5 seconds…</p> 5 seconds is enough to give something 
+    </div>
    
  
   
